@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-01
+2013-07-10 Andy Salnikov
+- cppcodegen.tmpl: fixt for type array data in new template stuff
+- pds2psana backend: pass owner shared pointer to the pdsdata
+  methods returning ndarray
+
 Tag: V00-08-00
 2013-07-10 Andy Salnikov
 - more templates
